# Ckraken-robot

./: .gitignore  CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  settingsform.cpp  settingsform.h  settingsform.ui
devices/: CMakeLists.txt  md_client.h  pherephicalIO.h
io_widget/: CMakeLists.txt  ioform.cpp  ioform.h  ioform.ui  modbus.h  pherephicalIO.h
programm/: CMakeLists.txt  commandmodel.cpp  commandmodel.h  iexecutor.cpp  iexecutor.h  programmform.cpp  programmform.h  programmform.ui
programm/commands/: icommand.cpp  icommand.h  icommandform.h
programm/commands/comment/: CMakeLists.txt  commentform.cpp  commentform.h  commentform.ui  execComment.cpp  execComment.h
programm/commands/programmChanger/: CMakeLists.txt  execprgchange.cpp  execprgchange.h  prgchangeform.cpp  prgchangeform.h  prgchangeform.ui
programm/commands/time/: CMakeLists.txt  execTime.cpp  execTime.h  timeform.cpp  timeform.h  timeform.ui
stateManager/: CMakeLists.txt  statemanager.cpp  statemanager.h  statemanager.ui
